--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -163,6 +163,7 @@ section {
     background-color: #4a1a1a;
     color: white;
     border: none;
+    max-width: 18%;
     padding: 16px 50px;
     font-size: 16px;
     border-radius: 30px;
@@ -332,6 +333,7 @@ section {
     background-color: #999;
     display: inline-block;
     transition: background-color 0.3s ease;
+    cursor: pointer;
 }
 
 .dot.active {
